force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Plan_Type__c</fullName>
    <label>Secondary Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EPO</fullName>
            </value>
            <value>
                <fullName>Fee-For-Service</fullName>
            </value>
            <value>
                <fullName>Health Care Savings Account</fullName>
            </value>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>Indemnity</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicaid HMO</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage</fullName>
            </value>
            <value>
                <fullName>Medicare Supplement</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>PPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>