force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Prior_Authorization_Fax__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Prior_Authorization_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary-Prior Authorization Fax</label>
    <type>Phone</type>
</CustomField>