force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Records_Received__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Records_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Records Received</label>
    <type>Date</type>
</CustomField>