force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Referral_Comments__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Referral_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Referral Comments</label>
    <type>TextArea</type>
</CustomField>