force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Referral_Contact_First__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Referral_Contact_First__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Referral Contact First</label>
    <length>90</length>
    <type>Text</type>
</CustomField>