force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Referral_Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Referral_Office_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Referral Office Number</label>
    <type>Phone</type>
</CustomField>