force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Referral_Required__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Referral_Required__c</fullName>
    <label>Secondary Referral Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>