force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Remaining_Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Remaining_Deductible_Amount__c</fullName>
    <label>Secondary Remaining Deductible Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>