force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Review_Approved__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Review_Approved__c</fullName>
    <label>Secondary Review:Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>