force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Review_Denied_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Review_Denied_Other_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Review Denied-Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>