force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Review_Denied_Reason__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Review_Denied_Reason__c</fullName>
    <inlineHelpText>Select Reason</inlineHelpText>
    <label>Secondary Review Denied-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Benefit Coverage</fullName>
            </value>
            <value>
                <fullName>Medical Necessity</fullName>
            </value>
            <value>
                <fullName>Non-coverage</fullName>
            </value>
            <value>
                <fullName>Non-formulary</fullName>
            </value>
            <value>
                <fullName>Non-preferred brand</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>