force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Specialty_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Specialty_Pharmacy__c</fullName>
    <label>Secondary-Specialty Pharmacy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accredo Health Group, Inc</fullName>
            </value>
            <value>
                <fullName>ACRO Pharmaceutical Services</fullName>
            </value>
            <value>
                <fullName>Aetna Specialty Pharmacy</fullName>
            </value>
            <value>
                <fullName>Allion Healthcare, Inc</fullName>
            </value>
            <value>
                <fullName>Ambient HealthCare, Inc</fullName>
            </value>
            <value>
                <fullName>Apex Therapeutic Care, Inc</fullName>
            </value>
            <value>
                <fullName>APS Pharmacy, Inc</fullName>
            </value>
            <value>
                <fullName>Armada Health Care, LLC</fullName>
            </value>
            <value>
                <fullName>Assured Pharmacy, Inc</fullName>
            </value>
            <value>
                <fullName>Avia Partners, Inc</fullName>
            </value>
            <value>
                <fullName>Axium Healthcare Pharmacy, Inc</fullName>
            </value>
            <value>
                <fullName>Bioscrip, Inc</fullName>
            </value>
            <value>
                <fullName>Blue Ridge Pharmacy, Inc</fullName>
            </value>
            <value>
                <fullName>CanAm Pharmacy</fullName>
            </value>
            <value>
                <fullName>Caremark Rx, Inc</fullName>
            </value>
            <value>
                <fullName>Caremark, Inc</fullName>
            </value>
            <value>
                <fullName>Critical Care Systems, Inc</fullName>
            </value>
            <value>
                <fullName>CuraScript, Inc</fullName>
            </value>
            <value>
                <fullName>Custom Care Pharmacy, Inc</fullName>
            </value>
            <value>
                <fullName>CVS Corporation</fullName>
            </value>
            <value>
                <fullName>Diplomat Specialty Pharmacy</fullName>
            </value>
            <value>
                <fullName>DrugMax, Inc</fullName>
            </value>
            <value>
                <fullName>excelleRX, Inc</fullName>
            </value>
            <value>
                <fullName>F &amp; M Specialty Pharmacy, Inc</fullName>
            </value>
            <value>
                <fullName>Familymeds Group, Inc</fullName>
            </value>
            <value>
                <fullName>Familymeds, Inc</fullName>
            </value>
            <value>
                <fullName>Freedom Drug</fullName>
            </value>
            <value>
                <fullName>Galloway Pharmacy</fullName>
            </value>
            <value>
                <fullName>Genoa Healthcare, LLC</fullName>
            </value>
            <value>
                <fullName>Guardian Pharmacy, LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>