force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Specialty_Pharmacy_Fax__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Specialty_Pharmacy_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Specialty Pharmacy Fax</label>
    <type>Phone</type>
</CustomField>