force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Specialty_Pharmacy_Office__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Specialty_Pharmacy_Office__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Specialty Pharmacy Office</label>
    <type>Phone</type>
</CustomField>