force-app/main/default/objects/Insurance_Verification__c/fields/Specialty_Pharmacy_Alternate_Office__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Pharmacy_Alternate_Office__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialty Pharmacy Alternate Office</label>
    <type>Phone</type>
</CustomField>