force-app/main/default/objects/Insurance_Verification__c/fields/Specialty_Pharmacy_Email__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Pharmacy_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialty Pharmacy Email</label>
    <type>Email</type>
</CustomField>