force-app/main/default/objects/Insurance_Verification__c/fields/Specialty_Pharmacy_Fax__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Pharmacy_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialty Pharmacy Fax</label>
    <type>Phone</type>
</CustomField>