force-app/main/default/objects/Insurance_Verification__c/fields/Specialty_Pharmacy_First__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Pharmacy_First__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialty Pharmacy First</label>
    <length>90</length>
    <type>Text</type>
</CustomField>