force-app/main/default/objects/Insurance_Verification__c/fields/Specialty_Pharmacy_Last__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Pharmacy_Last__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialty Pharmacy Last</label>
    <length>90</length>
    <type>Text</type>
</CustomField>