force-app/main/default/objects/Insurance_Verification__c/fields/Specific_Payer_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Specific_Payer_ID_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specific Payer ID Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>