force-app/main/default/objects/Insurance_Verification__c/fields/Specific_Specialty_Pharmacy_Comments__c.field-meta.xml
<CustomField>
    <fullName>Specific_Specialty_Pharmacy_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specific Specialty Pharmacy Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>