force-app/main/default/objects/Insurance_Verification__c/fields/Specific_Specialty_Pharmacy_Requested__c.field-meta.xml
<CustomField>
    <fullName>Specific_Specialty_Pharmacy_Requested__c</fullName>
    <label>Specific Specialty Pharmacy Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>