force-app/main/default/objects/Insurance_Verification__c/fields/Stage_at_Close__c.field-meta.xml
<CustomField>
    <fullName>Stage_at_Close__c</fullName>
    <label>Stage at Close</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prior Authorization</fullName>
            </value>
            <value>
                <fullName>PA Appeal Level 1</fullName>
            </value>
            <value>
                <fullName>PA Appeal Level 2</fullName>
            </value>
            <value>
                <fullName>Claim Appeal Level 1</fullName>
            </value>
            <value>
                <fullName>Claim Appeal Level 2</fullName>
            </value>
            <value>
                <fullName>External Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>