force-app/main/default/objects/Insurance_Verification__c/fields/Surgeons_Name__c.field-meta.xml
<CustomField>
    <fullName>Surgeons_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon&apos;s Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Physician</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Verification/Access to Care (Account)</relationshipLabel>
    <relationshipName>Insurance_Verification_Access_to_Care</relationshipName>
    <type>Lookup</type>
</CustomField>