force-app/main/default/objects/Insurance_Verification__c/fields/Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax ID Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>