force-app/main/default/objects/Insurance_Verification__c/fields/Third_Level_Appeal_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Third_Level_Appeal_Contact_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>3rd Level Appeal Contact Phone</label>
    <type>Phone</type>
</CustomField>