force-app/main/default/objects/Insurance_Verification__c/fields/Third_Level_Appeal_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Third_Level_Appeal_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>3rd Level Appeal Deadline</label>
    <type>Date</type>
</CustomField>