force-app/main/default/objects/Insurance_Verification__c/fields/Who_Performed_Prior_Authorization1__c.field-meta.xml
<CustomField>
    <fullName>Who_Performed_Prior_Authorization1__c</fullName>
    <label>Who Performed Prior Authorization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MD Office</fullName>
            </value>
            <value>
                <fullName>Zimmer</fullName>
            </value>
            <value>
                <fullName>Not Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>