force-app/main/default/objects/Insurance_Verification__c/fields/X1st_Level_Prior_Auth_Initiate_Hold__c.field-meta.xml
<CustomField>
    <fullName>X1st_Level_Prior_Auth_Initiate_Hold__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>1st Level Prior Auth Initiate Hold</label>
    <type>Date</type>
</CustomField>