force-app/main/default/objects/Insurance_Verification__c/fields/Zimmer_Product__c.field-meta.xml
<CustomField>
    <fullName>Zimmer_Product__c</fullName>
    <label>Zimmer Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ChondroFix</fullName>
            </value>
            <value>
                <fullName>DeNovo NT</fullName>
            </value>
            <value>
                <fullName>Gel-One</fullName>
            </value>
            <value>
                <fullName>Artificial Disc</fullName>
                <label>Mobi-C</label>
            </value>
            <value>
                <fullName>Subchondroplasty</fullName>
            </value>
            <value>
                <fullName>Tether</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>