force-app/main/default/objects/Insurance_Verification__c/recordTypes/AM_US_RC_Access_to_Care.recordType-meta.xml
<RecordType>
    <fullName>AM_US_RC_Access_to_Care</fullName>
    <active>true</active>
    <description>This record type will be used to created AM-US-RC Access to Care Verification Requests</description>
    <label>AM-US-RC Access to Care</label>
</RecordType>