force-app/main/default/objects/Insurance_Verification__c/recordTypes/Standard_Insurance_Verification.recordType-meta.xml
<RecordType>
    <fullName>Standard_Insurance_Verification</fullName>
    <active>true</active>
    <description>This is the standard insurance verification used by the Reimbursement Hotline Team.</description>
    <label>Standard Insurance Verification</label>
</RecordType>