force-app/main/default/objects/Insurance_Verification__c/validationRules/Check_Close_Date_and_Close_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Close_Date_and_Close_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(ATC_Close_Reason__c ,&apos;&apos;) 
, NOT(ISBLANK(ATC_Case_Close_Date__c ) ))</errorConditionFormula>
    <errorDisplayField>ATC_Close_Reason__c</errorDisplayField>
    <errorMessage>Kindly select ATC Close Reason Value.</errorMessage>
</ValidationRule>