force-app/main/default/objects/Insurance_Verification__c/validationRules/Last_Follow_Up_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Follow_Up_Check</fullName>
    <active>true</active>
    <description>Last Follow-Up not blank with Value in Follow Up Reminder (Days)</description>
    <errorConditionFormula>AND(
 ISBLANK( Last_Follow_Up__c ),
 NOT(ISPICKVAL( Last_Follow_Up_in_Hours__c ,&apos;&apos;) )
)</errorConditionFormula>
    <errorDisplayField>Last_Follow_Up__c</errorDisplayField>
    <errorMessage>Enter Last Follow-Up Field Value</errorMessage>
</ValidationRule>