force-app/main/default/objects/Insurance_Verification__c/validationRules/Release_hold_without_On_hold_date_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Release_hold_without_On_hold_date_check</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
AND(ISBLANK(X1st_Level_Prior_Auth_Initiate_Hold__c), NOT(ISBLANK(X1st_Level_Prior_Auth_Release_Hold__c) )), 
AND(ISBLANK(X2nd_Level_Prior_Auth_Initiate_Hold__c), NOT(ISBLANK(X2nd_Level_Prior_Auth_Release_Hold__c) )), 
AND(ISBLANK(External_Review_Initiate_Hold__c), NOT(ISBLANK(External_Review_Release_Hold__c ))), 
AND(ISBLANK(Prior_Auth_Initiate_Hold__c), NOT(ISBLANK(Prior_Auth_Release_Hold__c) )) 

)</errorConditionFormula>
    <errorMessage>Please enter -&quot;Initiate Hold&quot; Date</errorMessage>
</ValidationRule>